Fix backgrounds fixed on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,12 +413,12 @@ section {
   padding: 100px 0 20px 0;
   background: url('../img/backgrounds/hero.jpg');
   background-size: cover;
-  background-position: 50%;
+  background-position: center 20%;
 }
 
 #hero:before {
   content: '';
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -449,12 +449,6 @@ section {
   border-radius: 50%;
   overflow: hidden;
   max-width: 200px;
-}
-
-@media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed;
-  }
 }
 
 @media (max-width: 991px) {
@@ -667,7 +661,7 @@ section {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(11, 8, 8, 0.7);
+  background-color: rgba(11, 8, 8, 0.7);
 }
 
 #recommendations .recommendation-item {
@@ -737,12 +731,6 @@ section {
 
 #recommendations .owl-dot.active {
   background-color: #1acc8d !important;
-}
-
-@media (min-width: 1024px) {
-  #recommendations {
-    background-attachment: fixed;
-  }
 }
 
 @media (min-width: 992px) {
